# app/api/dashboard/accepted-bids/route.ts
@@ -1,7 +1,14 @@
+/* eslint-disable @typescript-eslint/no-unused-vars */
+
 import { NextResponse } from "next/server";
-import { getAcceptedBids } from "./_data";
+import { Bid, getAcceptedBids } from "./_data";
 import { withAuth } from "@/lib/auth";
 
+/**
+ * Get accepted bids data.
+ * @auth: bearer
+ * @response: Bid[]
+ */
 export const GET = withAuth(async () => {
     return NextResponse.json(getAcceptedBids());
 });
