# app/api/dashboard/route.ts
@@ -1,11 +1,26 @@
+/* eslint-disable @typescript-eslint/no-unused-vars */
+
 import { NextResponse } from "next/server";
-import { getBatteryData } from "./battery-status/_data";
-import { getFlexibilityData } from "./flexibility/_data";
-import { getPowerData } from "./power/_data";
-import { getFrequencyData } from "./frequency/_data";
-import { getAcceptedBids } from "./accepted-bids/_data";
+import { getBatteryData, BatteryDataPoint } from "./battery-status/_data";
+import { getFlexibilityData, FlexibilityDataPoint } from "./flexibility/_data";
+import { getPowerData, PowerDataPoint } from "./power/_data";
+import { getFrequencyData, FrequencyDataPoint } from "./frequency/_data";
+import { Bid, getAcceptedBids } from "./accepted-bids/_data";
 import { withAuth } from "@/lib/auth";
 
+type DashboardResponse = {
+    acceptedBids: Bid[];
+    batteryStatus: BatteryDataPoint[];
+    flexibility: FlexibilityDataPoint[];
+    power: PowerDataPoint[];
+    frequency: FrequencyDataPoint[];
+};
+
+/**
+ * Get all dashboard data.
+ * @auth: bearer
+ * @response: DashboardResponse
+ */
 export const GET = withAuth(async () => {
     const dashboardData = {
         acceptedBids: getAcceptedBids(),
